--- a/tft_test/CMakeLists.txt
+++ b/tft_test/CMakeLists.txt
@@ -3,11 +3,4 @@
 cmake_minimum_required(VERSION 3.5)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(app-template)
-
-
-idf_component_register(
-    SRCS "main.c"
-    INCLUDE_DIRS "."
-    REQUIRES esp_wifi nvs_flash adafruit_gfx adafruit_st7735
-)
+project(tft_test)
